# study-rust-grammar

./: .gitignore  README.md  package.json  test.sh  toc.md
by-example/: Cargo.toml
by-example/src/: associate.rs  format.rs  function.rs  macros.rs  main.rs  modules.rs  panics.rs  stds.rs  tests.rs  traits.rs  types.rs
chap1/: .appendix-1.md.swp  appendix-1.md  chap1.md  test.scm
chap2/: appendix-2.md  chap2.md
cover/: acknowlegements.md  cover.md  foreword.md  forewrod.md  preface.md  toc.md
guessing_game/: Cargo.toml
guessing_game/src/: handling.rs  main.rs  ownership.rs  variable.rs
minigrep/: Cargo.toml
minigrep/src/: concurrent.rs  lib.rs  main.rs  pattern.rs  shirt.rs
prj1/: Makefile  codeError  collection.rs  condition  hello  hello.rs  matching  matching.rs  owner  reuse
procmacro/: Cargo.toml
procmacro/src/: lib.rs
project/: Cargo.toml  Makefile  build.rs
project/prj1/: Cargo.toml  Makefile  PhysicalAccessControl.rs  codeError  codeError.rs  collection  collection.rs  condition  condition.rs  hello  hello.rs  matching  matching.rs  owner  owner.rs  reuse  reuse.rs
project/prj1/src/: lib.rs
project/prj2/: Makefile
project/src/: back_of_house.rs  bindings.rs  boxheap.rs  io.rs  main.rs  mcaro.rs  myasync.rs  threading.rs  wmath.c  wmath.h
project/src/front_of_house/: hosting.rs
project/src/front_of_house/hosting/: inner_hosting.rs
sha256digest-c/: README.md  main.c
sha256digest-lib/: Cargo.toml
sha256digest-lib/src/: lib.rs
tst-snark/: Cargo.toml
tst-snark/src/: main.rs  tst_args.rs
websvr/: hello.html
(+2 files in other folders)
