[package]
name = "project"
version = "0.1.0"
edition = "2021"
authors = ["yango <fake.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
procmacro = { path="../procmacro" }
# futures-executor = "0.3"
futures = { version="0.3.19", features=["executor", "thread-pool"] }


[dev-dependencies]


[workspace]
